# ai-assistant

./: .env.example  .gitignore  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  feature_request.md  refactor.md  task.md
agents/: base.py  calendar_agent.py  conversation_agent.py  models.py
cli/: formatter.py  main.py
config/: llm_config.py  settings.py
llm/: prompts.py  provider.py
mcp_server/: auth.py  calendar_tools.py  models.py  server.py
